Closed Bug 1693327 Opened 2 years ago Closed 2 years ago

Assertion failure: !rv.Failed(), at /builds/worker/checkouts/gecko/dom/performance/EventCounts.cpp:23

Categories

(Core :: Performance, defect, P2)

defect

Tracking

()

RESOLVED FIXED
89 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox86 --- unaffected
firefox87 --- wontfix
firefox88 --- wontfix
firefox89 --- fixed

People

(Reporter: jkratzer, Assigned: sefeng)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: assertion, regression, testcase)

Attachments

(1 file)

Found while fuzzing mozilla-central rev 375bea508a03 (built with --enable-debug). You can find a pernosco session for this issue at the URL below:
https://pernos.co/debug/fFerJojH0tvSReCTF-sVEg/index.html

Assertion failure: !rv.Failed(), at /builds/worker/checkouts/gecko/dom/performance/EventCounts.cpp:23

    #0 0x7ff770aaca8c in mozilla::dom::EventCounts::EventCounts(nsISupports*) /builds/worker/checkouts/gecko/dom/performance/EventCounts.cpp:23:3
    #1 0x7ff770ab41a6 in mozilla::dom::PerformanceMainThread::PerformanceMainThread(nsPIDOMWindowInner*, nsDOMNavigationTiming*, nsITimedChannel*, bool) /builds/worker/checkouts/gecko/dom/performance/PerformanceMainThread.cpp:99:24
    #2 0x7ff770aad939 in mozilla::dom::Performance::CreateForMainThread(nsPIDOMWindowInner*, nsIPrincipal*, nsDOMNavigationTiming*, nsITimedChannel*) /builds/worker/checkouts/gecko/dom/performance/Performance.cpp:52:41
    #3 0x7ff76e16c14d in nsPIDOMWindowInner::CreatePerformanceObjectIfNeeded() /builds/worker/checkouts/gecko/dom/base/nsGlobalWindowInner.cpp:2413:20
    #4 0x7ff76e162050 in nsPIDOMWindowInner::GetPerformance() /builds/worker/checkouts/gecko/dom/base/nsGlobalWindowInner.cpp:2389:3
    #5 0x7ff76c79f2ef in mozilla::net::LoadInfo::GetPerformanceStorage() /builds/worker/checkouts/gecko/netwerk/base/LoadInfo.cpp:1762:57
    #6 0x7ff76cc25553 in GetPerformanceStorage /builds/worker/checkouts/gecko/netwerk/protocol/http/HttpBaseChannel.cpp:4846:21
    #7 0x7ff76cc25553 in mozilla::net::HttpBaseChannel::MaybeReportTimingData() /builds/worker/checkouts/gecko/netwerk/protocol/http/HttpBaseChannel.cpp:4855:7
    #8 0x7ff76cc45e53 in mozilla::net::HttpChannelChild::DoPreOnStopRequest(nsresult) /builds/worker/checkouts/gecko/netwerk/protocol/http/HttpChannelChild.cpp:970:3
    #9 0x7ff76cc45b8c in mozilla::net::HttpChannelChild::OnStopRequest(nsresult const&, mozilla::net::ResourceTimingStructArgs const&, mozilla::net::nsHttpHeaderArray const&) /builds/worker/checkouts/gecko/netwerk/protocol/http/HttpChannelChild.cpp:915:3
    #10 0x7ff76cca612d in operator() /builds/worker/checkouts/gecko/netwerk/protocol/http/HttpChannelChild.cpp:816:15
    #11 0x7ff76cca612d in std::_Function_handler<void (), mozilla::net::HttpChannelChild::ProcessOnStopRequest(nsresult const&, mozilla::net::ResourceTimingStructArgs const&, mozilla::net::nsHttpHeaderArray const&, nsTArray<mozilla::net::ConsoleReportCollected>&&, bool)::$_9>::_M_invoke(std::_Any_data const&) /builds/worker/fetches/clang/bin/../lib/gcc/x86_64-unknown-linux-gnu/7.4.0/../../../../include/c++/7.4.0/bits/std_function.h:316:2
    #12 0x7ff76ce112ab in mozilla::net::ChannelEventQueue::FlushQueue() /builds/worker/checkouts/gecko/netwerk/ipc/ChannelEventQueue.cpp:90:12
    #13 0x7ff76ce4638c in MaybeFlushQueue /builds/worker/workspace/obj-build/dist/include/mozilla/net/ChannelEventQueue.h:330:5
    #14 0x7ff76ce4638c in CompleteResume /builds/worker/workspace/obj-build/dist/include/mozilla/net/ChannelEventQueue.h:309:5
    #15 0x7ff76ce4638c in mozilla::net::ChannelEventQueue::ResumeInternal()::CompleteResumeRunnable::Run() /builds/worker/checkouts/gecko/netwerk/ipc/ChannelEventQueue.cpp:148:17
    #16 0x7ff76c660672 in mozilla::SchedulerGroup::Runnable::Run() /builds/worker/checkouts/gecko/xpcom/threads/SchedulerGroup.cpp:146:20
    #17 0x7ff76c666bef in mozilla::RunnableTask::Run() /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:472:16
    #18 0x7ff76c665166 in mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal(mozilla::detail::BaseAutoLock<mozilla::Mutex&> const&) /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:753:26
    #19 0x7ff76c663fc4 in mozilla::TaskController::ExecuteNextTaskOnlyMainThreadInternal(mozilla::detail::BaseAutoLock<mozilla::Mutex&> const&) /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:611:15
    #20 0x7ff76c664177 in mozilla::TaskController::ProcessPendingMTTask(bool) /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:395:36
    #21 0x7ff76c66aa16 in operator() /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:133:37
    #22 0x7ff76c66aa16 in mozilla::detail::RunnableFunction<mozilla::TaskController::InitializeInternal()::$_3>::Run() /builds/worker/workspace/obj-build/dist/include/nsThreadUtils.h:534:5
    #23 0x7ff76c67bf07 in nsThread::ProcessNextEvent(bool, bool*) /builds/worker/checkouts/gecko/xpcom/threads/nsThread.cpp:1158:16
    #24 0x7ff76c68235a in NS_ProcessNextEvent(nsIThread*, bool) /builds/worker/checkouts/gecko/xpcom/threads/nsThreadUtils.cpp:548:10
    #25 0x7ff76cf97266 in mozilla::ipc::MessagePump::Run(base::MessagePump::Delegate*) /builds/worker/checkouts/gecko/ipc/glue/MessagePump.cpp:87:21
    #26 0x7ff76cf028e3 in MessageLoop::RunInternal() /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:335:10
    #27 0x7ff76cf027fd in RunHandler /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:328:3
    #28 0x7ff76cf027fd in MessageLoop::Run() /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:310:3
    #29 0x7ff770d59628 in nsBaseAppShell::Run() /builds/worker/checkouts/gecko/widget/nsBaseAppShell.cpp:137:27
    #30 0x7ff7725993c3 in XRE_RunAppShell() /builds/worker/checkouts/gecko/toolkit/xre/nsEmbedFunctions.cpp:902:20
    #31 0x7ff76cf9814c in mozilla::ipc::MessagePumpForChildProcess::Run(base::MessagePump::Delegate*) /builds/worker/checkouts/gecko/ipc/glue/MessagePump.cpp:237:9
    #32 0x7ff76cf028e3 in MessageLoop::RunInternal() /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:335:10
    #33 0x7ff76cf027fd in RunHandler /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:328:3
    #34 0x7ff76cf027fd in MessageLoop::Run() /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:310:3
    #35 0x7ff772598f98 in XRE_InitChildProcess(int, char**, XREChildData const*) /builds/worker/checkouts/gecko/toolkit/xre/nsEmbedFunctions.cpp:733:34
    #36 0x560806958f86 in content_process_main /builds/worker/checkouts/gecko/browser/app/../../ipc/contentproc/plugin-container.cpp:57:28
    #37 0x560806958f86 in main /builds/worker/checkouts/gecko/browser/app/nsBrowserApp.cpp:306:18
    #38 0x7ff7816570b2 in __libc_start_main /build/glibc-ZN95T4/glibc-2.31/csu/../csu/libc-start.c:308:16

I'll take a look

Flags: needinfo?(sefeng)
Assignee: nobody → sefeng
Status: NEW → ASSIGNED

Clearing my NI since I have the patch up for review.

Flags: needinfo?(sefeng)
Severity: -- → S2
Priority: -- → P2
Attachment #9205530 - Attachment description: Bug 1693327 - Assert the global is dying when EventCounts fails to set values → WIP: Bug 1693327 - Assert the global is dying when EventCounts fails to set values
Attachment #9205530 - Attachment description: WIP: Bug 1693327 - Assert the global is dying when EventCounts fails to set values → Bug 1693327 - Assert the global is dying when EventCounts fails to set values
Pushed by sefeng@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/64d8c5bc379e
Assert the global is dying when EventCounts fails to set values r=smaug
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 89 Branch

Since the status are different for nightly and release, what's the status for beta?
For more information, please visit auto_nag documentation.

Has Regression Range: --- → yes
Regressions: 1706132
You need to log in before you can comment on or make changes to this bug.