Bug 1693327 - Assert the global is dying when EventCounts fails to set values r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D106530